--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,18 @@
 /* Geral */
+@import url('https://fonts.googleapis.com/css2?family=Encode+Sans:wght@100;200;300;400;500;600;700&family=Righteous&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Encode+Sans:wght@100;200;300;400;500;600;700&family=Righteous&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500&display=swap');
+
+.fonte-righteous {
+    font-family: righteous;
+}
+
 body {
     background-color: #E5E5E5;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+* {
+    box-sizing: border-box;
 }
 
 /* topo */
@@ -8,6 +20,13 @@ body {
     width: 100%;
     height: 92px;
     background-color: #CF2B2B;
+    position: fixed;
+    top: 0px;
+    left: 0px
+}
+
+.topo h1 {
+    font-size: 44px;
 }
 
 /* Conteúdo */
@@ -60,6 +79,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
 }
 
 .barra-inferior button {
