--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,7 +7,6 @@
 }
 
 body {
-    background-color: #E5E5E5;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -18,6 +17,7 @@ body {
 .tela {
     height: 100%;
     position: relative;
+    background-color: #E5E5E5;
 }
 
 /* topo */
@@ -25,6 +25,10 @@ body {
     width: 100%;
     height: 92px;
     background-color: #CF2B2B;
+    padding-left: 21px;
+    padding-bottom: 18px;
+    padding-top: 8px;
+    margin-bottom: 4px;
 
 }
 
@@ -46,6 +50,12 @@ body {
     width: 100%;
 }
 
+.conteudo h2 {
+    margin-top: 27px;
+    margin-bottom: 17px;
+    margin-left: 16px;
+}
+
 .cards {
     display: flex;
     overflow-x: scroll;
@@ -56,6 +66,13 @@ body {
     height: 216px;
     background-color: #FFFFFF;
     border-radius: 9px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-left: 14px;
+    padding-top: 18px;
+    padding-bottom: 13px;
+    padding-right: 14px;
     margin-left: 16px;
 }
 
