--- a/css/estilos.css
+++ b/css/estilos.css
@@ -35,6 +35,7 @@ body {
     position: fixed;
     top: 0px;
     left: 0px;
+    z-index: 1;
 }
 
 .topo h2 {
@@ -80,6 +81,7 @@ body {
     padding-right: 14px;
     margin-left: 16px;
     box-shadow: 3px 3px 10px 0 rgba(0, 0, 0, 0.25);
+    position: relative;
 }
 
 .card img {
@@ -100,9 +102,19 @@ body {
     color: #A6A6A6;
 }
 
+.card-inferior {
+    display: flex;
+    justify-content: space-between;
+}
+
 .preco span {
     font-size: 16px;
     color: #000000;
+}
+
+.card ion-icon {
+    color: #32B72F;
+    display: none;
 }
 
 /* Barra inferior */
@@ -128,4 +140,9 @@ body {
 
 button p {
     font-size: 20px;
+}
+
+/* JS */
+.selecionado {
+    display: initial;    
 }
