--- a/css/estilos.css
+++ b/css/estilos.css
@@ -152,6 +152,20 @@ body {
     border-radius: 50px;
 }
 
+ .barra-inferior .botao-escondido {
+    background-color: #32B72F;
+    color: #32B72F;
+    Width: 364px;
+    Height: 61px;
+    border-radius: 50px;
+ }
+
+ .botao-escondido p {
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+ }
+
 button p {
     font-size: 20px;
 }
