--- a/css/estilos.css
+++ b/css/estilos.css
@@ -22,6 +22,68 @@ body {
     padding-bottom: 92px;
 }
 
+.tela-pedido {
+    width: 424px;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.9);
+    padding-top: 92px;
+    padding-bottom: 92px;
+    z-index: 2;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
+
+.pedido {
+    width: 100%;
+    height: 353px;
+    border-radius: 9px;
+    background-color: #50D074;
+    position: absolute;
+    padding: 24px;
+    top: 336px;
+    z-index: 3;
+    box-shadow: 3px 3px 10px 0 rgba(0, 0, 0, 0.25);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    object-fit: cover;  
+}
+
+.pedido h3 {
+    display: flex;
+    justify-content: center;
+    color: #FFFFFF;
+}
+
+.total {
+    font-weight: bold;
+}
+
+.pedido button {
+    width: 329px;
+    height: 52px;
+    border-radius: 100px;
+    background-color: #FFFFFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    color: #50D074;
+}
+
+.pedido > p {
+    display: flex;
+    justify-content: center;
+    font-weight: bold;
+    color: #FFFFFF;
+}
+
+.pedido-detalhe{
+    display: flex;
+    justify-content: space-between;
+    color: #FFFFFF; 
+}
 /* topo */
 .topo {
     width: 100%;
